--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -129,8 +129,8 @@ The design, commissioning, and operation of accelerator facilities is a
   complex interplay of several conflicting design goals.
 We propose to tackle this problem by means of multi-objective optimization
   algorithms which also facilitate a parallel deployment.
-In order to compute solutions in a meaningful time frame we require a fast
-  and scalable software framework.
+In order to compute solutions in a meaningful time frame a fast 
+  and scalable software framework is required.
 In this paper, we present the implementation of such a general-purpose
   framework for simulation-based multi-objective optimization methods that
   allows the automatic investigation of optimal sets of machine parameters.
@@ -138,9 +138,9 @@ The implementation is based on a master/slave paradigm, employing several
   masters that govern a set of slaves executing simulations and performing
   optimization tasks.
 Using evolutionary algorithms and \textsc{OPAL}~simulations as optimizer and
-  forward solver in our framework, we present validation experiments and first
+  forward solver in our framework, validation experiments and first
   results of multi-objective optimization problems in the domain of beam
-  dynamics.
+  dynamics is presented.
   
 \end{abstract}
 
@@ -196,15 +196,14 @@ To that end, we use a master/slave mechanism where a master process governs a
 This separation allows easy interchange of optimization algorithms, forward
   solvers and optimization problems.
 A ``pilot'' coordinates all efforts between the optimization algorithm and the
-  beam dynamics task. In the sequel we will also use the notion of ``forward solver'' to indicate 
-  the beam dynamics task.
+  beam dynamics task. In the sequel we will also use the notion of ``forward solver'' to indicate the beam dynamics task.
 This forms a robust and general framework for massively parallel
   multi-objective optimization.
 Currently the framework offers one concrete optimization algorithm, an
   evolutionary algorithm employing a \textsc{NSGA-II} selector \cite{pisa}.
 Normally, simulation based approaches are plagued by the trade-of between
   level of detail and time to solution.
-We address this problem later in Section~(\ref{awa:subsection:test}) by using forward solvers with different time and
+This problem is addressed later in Section~(\ref{awa:subsection:test}) by using forward solvers with different time and
   resolution complexity.
 
 The framework discussed here, incorporates the following three contributions:
@@ -226,7 +225,6 @@ In Section~\ref{sec:framework} the implementation of the framework is discussed.
 We introduce the employed forward-solver in Section~\ref{sec:forward-solver}.
 A validation and a proof of concept application in the two beam dynamics problems 
 mentioned above is discussed in Section~\ref{sec:experiments}.
-
 
 
 \section{MULTI-OBJECTIVE OPTIMIZATION} \label{sec:optimization}
@@ -295,8 +293,8 @@ All points on this surface are considered to be Pareto optimal.
 Once the shape of the Pareto front has been determined, the buyer can
   \textit{specify preference}, balancing the features by observing the
   effect on the optimality criteria, converging to the preferred solution.
-This is called \textit{a posteriori} preference specification since we select
-  a solution after all possible trade-offs have been presented to us.
+This is called \textit{a posteriori} preference specification since 
+  a solution is selected after all possible trade-offs have been presented to us.
 An alternative is to specify preference \textit{a priori}, e.g. by
   weighting (specifying preference before solving the problem) and combining
   all objectives into one and applying a single-objective method to solve the
@@ -313,7 +311,7 @@ A number of approaches have been proposed,
   simulated annealing~\cite{kigv:83},
   swarm methods~\cite{keeb:95},
   and many more~\cite{domc:96,cati:02,kara:05,hoss:09}.
-In the next section we briefly introduce the theory of evolutionary algorithms
+In the next section, we briefly introduce the theory of evolutionary algorithms
   used in the present work.
 
 
@@ -374,7 +372,7 @@ After evaluating the fitness of all the freshly born individuals a
   \textit{generation} cycle has completed and the process can start anew.
 
 Since there already exist plenty of implementations of evolutionary algorithms,
-  we decided to incorporate the PISA library \cite{pisa} into our
+  it was decided to incorporate the PISA library \cite{pisa} into our
   framework.
 One of the advantages of PISA is that it separates variator from selector,
   rendering the library expandable and configurable.
@@ -398,7 +396,7 @@ In the worst case some MPI processes are taking a long time to compute the
   fitness of the last individual in the pool of individuals to evaluate.
 During this time all other resources are idle and wait for the result of
   this one individual in order to continue to generate and evaluate offspring.
-To counteract this effect we call the selector already when two individuals
+To counteract this effect, the selector is already called when two individuals
   have finished evaluating their fitness, lifting the boundaries between
   generations and evaluating the performance of individuals.
 New offspring will be generated and MPI processes can immediately return to
@@ -449,7 +447,7 @@ Our framework follows a more general approach, providing a user-friendly way
 Tailoring the optimization algorithm to the optimization problem at hand is
   an important feature due to the many different characteristics of
   optimization problems that should be handled by such a general framework.
-As an example, we show how \textsc{Pisa} \cite{pisa}, an existing evolutionary
+As an example, it is shown how \textsc{Pisa} \cite{pisa}, an existing evolutionary
   algorithm library, was integrated with ease.
 Similarly, other multi-objective algorithms could be incorporated and
   used to solve optimization problems.
@@ -491,10 +489,10 @@ This not only provides users with  great flexibility in using any simulation
 
 \subsection{Components}
 
-The basic assumption in simulation-based optimization is that we need to
-  call an expensive simulation software component present in the
-  constraints or objectives.
-We divide the framework in three exchangeable components, as shown in
+The basic assumption in simulation-based optimization is that a
+  call to an expensive simulation software component present in the
+  constraints or objectives is needed.
+The framework is divided in three exchangeable components, as shown in
   Fig.~\ref{fig:opt-framework-layout}, to encapsulate the major behavioral
   patterns of the framework.
 %
@@ -612,7 +610,7 @@ In most cases forward solver implementations are simple wrappers to run
   an existing ``external'' simulation code using a set of design variables as
   input. In case of the OPAL integration, basically the \texttt{main} function is
   playing the role of the ``forward solver''. Underlying the general nature of our approach, 
-  in a similar project, we use the described methods for cavity shape optimisation based on \cite{ARBENZ2008381}. 
+  in a similar project, the described methods are used for cavity shape optimisation based on \cite{ARBENZ2008381}. 
 As for the \textsc{Optimizer} component there exists a base class, labeled
   \texttt{Simulation} as common basis for all \textsc{Simulation}
   implementations.
@@ -664,7 +662,7 @@ To allow arbitrary constraints and objective expressions, such as
 %\vspace{0.2cm}
 %
 \noindent
-  we implemented an expression parser using Boost Spirit~\cite{boost}.
+  An expression parser using Boost Spirit~\cite{boost} was implemented.
 In addition to the parser, we need an evaluator able to evaluate an expression,
   given a parse tree and variable assignments to an actual value.
 Expressions arising in multi-objective optimization problems usually evaluate
@@ -676,8 +674,8 @@ Upon evaluation, all unknown variables are replaced with values, either
 In this stage, the AST can be evaluated bottom-up and the desired result is
   returned after processing the root of the tree.
 
-To improve the expressive power of objectives and constraints we introduced a
-  simple mechanism to define and call custom functions in expressions.
+To improve the expressive power of objectives and constraints, a
+  simple mechanism to define and call custom functions in expressions was introduced.
 Using simple functors, e.g. as the one shown in Listing 4 to compute an
   average over a set of data points, enriches expressions with custom
   functions.
