--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -103,7 +103,7 @@ This will also enable cleaner transport through downstream elements.
 \begin{figure*}
 	\begin{tikzpicture}[every node/.style={anchor=south west,inner sep=0pt},x=1mm, y=1mm,]   
 	\node (fig1) at (0,0)
-	{\includegraphics[width=\textwidth]{Report/awa-drawing}};
+	{\includegraphics[width=\textwidth]{figures/awa-drawing}};
 	\node[fill=white, inner sep=2pt] (txt2) at (0,\gunheight) {\large Gun};
 	\node[fill=white, inner sep=2pt] (txt2) at (20,\gunheight) {\large Accelerating Cavities};
 	\node[fill=white, inner sep=2pt] (txt2) at (\quadleft,\quadheight) {\large Quadrupoles};
@@ -131,7 +131,7 @@ This will also enable cleaner transport through downstream elements.
 \begin{figure*}
 	\begin{tikzpicture}[every node/.style={anchor=south west,inner sep=0pt},x=1mm, y=1mm,]   
 	\node (fig2) at (0,0)
-	{\includegraphics[width=\textwidth]{Report/tba_dogleg}};
+	{\includegraphics[width=\textwidth]{figures/tba_dogleg}};
 	\node[fill=white, inner sep=2pt] (txt2) at (3,\sheight) {\large $s_1$};
 	\node[fill=white, inner sep=2pt] (txt2) at (20,\sheight) {\large $s_2$};
 	\node[fill=white, inner sep=2pt] (txt2) at (46,45) {\large $s_3$};
@@ -219,29 +219,10 @@ beam has low energy and changing rapidly.
 
 \begin{figure}%[h]
 	\centering
-	\includegraphics[width=\linewidth]{Report/timestep_comparison_paper}
+	\includegraphics[width=\linewidth]{figures/timestep_comparison_paper}
 	\caption{Comparison of different fidelity models (dT stands for time step).}
 	\label{tstep}
 \end{figure}
-
-
-\iffalse
-\begin{table}%[h!]
-	\begin{center}
-		\caption{Low and mid fidelity simulation parameters.}
-		\label{fidelity}
-		\begin{tabular*}{0.48\textwidth}{l @{\extracolsep{\fill}} C c D }
-			\hline\noalign{\smallskip}
-			& Number of particles & dT (seconds) & Time to simulation (minutes)\\
-			\noalign{\smallskip}\hline\noalign{\smallskip}
-			low fidelity  			&  10,000   & $5 \times10^{-11}$  &  2.6 \\
-			adjusted low fidelity  	&  10,000   & $2 \times 10^{-12}$, $1 \times 10^{-11}$ & 1.6 \\
-			mid fidelity 			&  100,000  & $1 \times 10^{-12}$ &  18\\
-			\noalign{\smallskip}\hline
-		\end{tabular*}
-	\end{center}
-\end{table}
-\fi 
 
 \subsubsection{Hyper parameter Scan}
 While the optimization problem and goals were well defined (Subsection \ref{awaproblem}), 
@@ -357,7 +338,7 @@ the hyper parameters in ex-4 were chosen as the default values for subsequent ru
 	\centering
 	\begin{minipage}{0.49\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{Report/ex-pareto1}
+		\includegraphics[width=\textwidth]{figures/ex-pareto1}
 		(a) Pareto fronts for ex-1 through ex-4 at $s_1$.
 		%\caption{(a) Pareto fronts at $s_1$.}
 		%\label{expareto1}
@@ -365,7 +346,7 @@ the hyper parameters in ex-4 were chosen as the default values for subsequent ru
 	\end{minipage}
 	\begin{minipage}{0.49\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{Report/ex-pareto2}
+		\includegraphics[width=\textwidth]{figures/ex-pareto2}
 		(b) Pareto fronts for ex-1 through ex-4 at $s_2$.
 		%\caption{(b) Pareto fronts at $s_2$.}
 		%\label{expareto2}
@@ -373,8 +354,6 @@ the hyper parameters in ex-4 were chosen as the default values for subsequent ru
 	\caption{Comparison of Pareto fronts for initial optimization experiments, ex-1 through ex-4.}
 	\label{expareto}
 \end{figure}
-
-
 
 
 
@@ -524,7 +503,7 @@ Again, the location of optimization is $s_3=19.4$ [m].
 	\begin{center}		
 		\begin{tikzpicture}[scale=1]
 		\node (fig1) at (0,0)
-		{\includegraphics[width=0.5\textwidth]{../pareto_stat_plots/xy_vs_pxy_pareto_front_quads_before_Q5}};
+		{\includegraphics[width=0.5\textwidth]{figures/xy_vs_pxy_pareto_front_quads_before_Q5}};
 		\node[star, star points=5, star point ratio=0.5, fill=yellow, draw](key) at (3.35,-1.7) {};
 		\end{tikzpicture}
 	\end{center} 
@@ -533,18 +512,6 @@ Again, the location of optimization is $s_3=19.4$ [m].
 	\label{fig:pareto1}
 \end{figure}
  
-\iffalse
-\begin{figure}
-	\centering
-	\includegraphics[width=0.48\textwidth]{../pareto_stat_plots/dE_vs_zrms_pareto_front_quads_before_Q5_zoomout}%
-	\llap{\raisebox{1.9cm}{%  move next graphics to top right corner
-			\includegraphics[height=4.5cm]{../pareto_stat_plots/dE_vs_zrms_pareto_front_quads_before_Q5}%
-	}}
-	\caption{Pareto front comparing energy spread (dE) and bunch length ($\sigma_z$). \nrnote{add tikz arrows to point to left side of curve?}}
-	\label{fig:pareto2}
-\end{figure}  
-\fi
-
 As expected, the x dimension is impacted by the bending elements, and unable to reach 
 the small beam sizes seen in the y dimension. This suggest suggests objectives in the x 
 dimension will drive design variable choices used during operations. 
@@ -565,7 +532,7 @@ as it travels to the last triplet in Fig.~\ref{awa-tba}.
 Overall this solution is satisfactory, and meets all requirements at the AWA.
 
 \begin{figure}
-	\includegraphics[width=0.48\textwidth]{../pareto_stat_plots/xy-max-min-sigma-paper}
+	\includegraphics[width=0.48\textwidth]{figures/xy-max-min-sigma-paper}
 	\caption{Optimized beam sizes along high charge beam line. The gun is located at $s=0$, 
 	both x and y beam sizes are shown. The black line represents the relevant beam line aperture, while
 	the green line indicates the location of the optimization.}
