--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -141,7 +141,9 @@ The implementation is based on a master/slave paradigm, employing several
 Using evolutionary algorithms and \textsc{OPAL}~simulations as optimizer and
   forward solver in our framework, validation experiments and first
   results of multi-objective optimization problems in the domain of beam
-  dynamics is presented.
+  dynamics is presented. The high charge beam line at the Argonne Wakefield 
+  Accelerator Facility was used beam dynamics model. The 3D beam size, 
+  transverse momentum, and energy spread were optimized.
   
 \end{abstract}
 
