--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -141,7 +141,9 @@ The implementation is based on a master/slave paradigm, employing several
 Using evolutionary algorithms and \textsc{OPAL}~simulations as optimizer and
   forward solver in our framework, validation experiments and first
   results of multi-objective optimization problems in the domain of beam
-  dynamics is presented.
+  dynamics is presented. The high charge beam line at the Argonne Wakefield 
+  Accelerator Facility was used beam dynamics model. The 3D beam size, 
+  transverse momentum, and energy spread were optimized.
   
 \end{abstract}
 
@@ -163,7 +165,7 @@ Fields, such as material science, chemistry, the biosciences, particle
 Achieving the required performance in the design, commissioning, and operation
   of accelerator facilities is a complex and versatile problem.
 Today, tuning machine parameters, e.g. bunch charge, emission time and
-  various parameters of beam line elements, is most commonly done manually by
+  various parameters of beamline elements, is most commonly done manually by
   running simulation codes to scan the parameter space.
 This approach is tedious, time consuming and can be error prone.
 In order to be able to reliably identify optimal configurations of
