--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -138,11 +138,11 @@ In this paper, we present the implementation of such a general-purpose
 The implementation is based on a master/slave paradigm, employing several
   masters that govern a set of slaves executing simulations and performing
   optimization tasks.
-Using evolutionary algorithms and \textsc{OPAL}~simulations as optimizer and
-  forward solver in our framework, validation experiments and first
-  results of multi-objective optimization problems in the domain of beam
-  dynamics is presented. The high charge beam line at the Argonne Wakefield 
-  Accelerator Facility was used beam dynamics model. The 3D beam size, 
+Using evolutionary algorithms as the optimizer and \textsc{OPAL} as the 
+  forward solver, validation experiments and 
+ results of multi-objective optimization problems in the domain of beam
+  dynamics are presented. The high charge beam line at the Argonne Wakefield 
+  Accelerator Facility was used as the beam dynamics model. The 3D beam size, 
   transverse momentum, and energy spread were optimized.
   
 \end{abstract}
