fixing spacing for one sided doc

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -1,5 +1,4 @@
 \documentclass[%
-preprint,
 %superscriptaddress,
 %groupedaddress,
 %unsortedaddress,
@@ -7,6 +6,7 @@ preprint,
 %frontmatterverbose, 
 preprint,
 linenumbers,
+%twocolumn,
 %showpacs,preprintnumbers,
 %nofootinbib,
 %nobibnotes,
