adding Christof's changes to prab paper

--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -226,7 +226,7 @@ The next section introduces the notation of multi-objective optimization
 theory and describes the first implemented optimizer.
 In Section~\ref{sec:framework} the implementation of the framework is discussed.
 We introduce the employed forward-solver in Section~\ref{sec:forward-solver}.
-A validation and a proof of concept application in the two beam dynamics problems 
+A validation and a proof of concept application in the beam dynamics problems 
 mentioned above is discussed in Section~\ref{sec:experiments}.
 
 
@@ -612,7 +612,7 @@ A special set of communicator groups serves as communication channels to the
 In most cases forward solver implementations are simple wrappers to run
   an existing ``external'' simulation code using a set of design variables as
   input. In case of the OPAL integration, basically the \texttt{main} function is
-  playing the role of the ``forward solver''. Underlying the general nature of our approach, 
+  playing the role of the ``forward solver''. To underline the general nature of our approach, 
   in a similar project, the described methods are used for cavity shape optimisation based on \cite{ARBENZ2008381}. 
 As for the \textsc{Optimizer} component there exists a base class, labeled
   \texttt{Simulation} as common basis for all \textsc{Simulation}
@@ -812,26 +812,27 @@ Using the default expression primitives this can be stated in an input file
 %
 %\vspace{0.2cm}
 
-\begin{flushleft}
-\begin{Verbatim}[fontsize=\scriptsize]
-d1: DVAR, VARIABLE="x1", LOWERBOUND="-1.0", UPPERBOUND="1.0";
-d2: DVAR, VARIABLE="x2", LOWERBOUND="-1.0", UPPERBOUND="1.0";
-d3: DVAR, VARIABLE="x3", LOWERBOUND="-1.0", UPPERBOUND="1.0";
-
-obj1: OBJECTIVE,
-EXPR="1- exp(-1 * (sq(x1 - 1/sqrt(3)) 
-+ sq(x2 - 1/sqrt(3)) + sq(x3 - 1/sqrt(3))))";
-obj2: OBJECTIVE,
-EXPR="1- exp(-1 * (sq(x1 + 1/sqrt(3)) 
-+ sq(x2 + 1/sqrt(3)) + sq(x3 + 1/sqrt(3))))";
-
-objs:    OBJECTIVES = (obj1, obj2);
-dvars:   DVARS = (d1, d2, d3);
-constrs: CONSTRAINTS = ();
-opt: OPTIMIZE, OBJECTIVES=objs, DVARS=dvars, CONSTRAINTS=constrs;
-\end{Verbatim}
-\end{flushleft}
-%\vspace{0.2cm}
+\begin{samepage}
+	\begin{flushleft}
+		\begin{Verbatim}[fontsize=\scriptsize]
+		d1: DVAR, VARIABLE="x1", LOWERBOUND="-1.0", UPPERBOUND="1.0";
+		d2: DVAR, VARIABLE="x2", LOWERBOUND="-1.0", UPPERBOUND="1.0";
+		d3: DVAR, VARIABLE="x3", LOWERBOUND="-1.0", UPPERBOUND="1.0";
+		
+		obj1: OBJECTIVE,
+		EXPR="1- exp(-1 * (sq(x1 - 1/sqrt(3)) 
+		+ sq(x2 - 1/sqrt(3)) + sq(x3 - 1/sqrt(3))))";
+		obj2: OBJECTIVE,
+		EXPR="1- exp(-1 * (sq(x1 + 1/sqrt(3)) 
+		+ sq(x2 + 1/sqrt(3)) + sq(x3 + 1/sqrt(3))))";
+		
+		objs:    OBJECTIVES = (obj1, obj2);
+		dvars:   DVARS = (d1, d2, d3);
+		constrs: CONSTRAINTS = ();
+		opt: OPTIMIZE, OBJECTIVES=objs, DVARS=dvars, CONSTRAINTS=constrs;
+		\end{Verbatim}
+	\end{flushleft}
+\end{samepage}
 
 
 
@@ -851,8 +852,8 @@ Its modular design simplifies the application to simulation-based optimization
  % framework.
 The flexibility of being able to adapt both ends of the optimization
   process, the forward solver and the optimization algorithm simultaneously
-  not only leads to broad applicability but it facilitates the ability to
-  tailor the optimization strategy to the optimization problem as well.
+  not only leads to broad applicability but it facilitates
+  tailoring the optimization strategy to the optimization problem as well.
 
 %This first study shows that the framework is ready to tackle problems arising
 %  in the domain of beam dynamics.
