removing grids from plots in figure 10

--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -811,7 +811,7 @@ Using the default expression primitives this can be stated in an input file
   as:
 %
 %\vspace{0.2cm}
-
+\iffalse
 \begin{samepage}
 	\begin{flushleft}
 		\begin{Verbatim}[fontsize=\scriptsize]
@@ -833,7 +833,7 @@ Using the default expression primitives this can be stated in an input file
 		\end{Verbatim}
 	\end{flushleft}
 \end{samepage}
-
+\fi
 
 
 \input{theor-experiment} 
