fixing figure names in paper

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -3,6 +3,7 @@
 \usepackage{color}
 \setlength{\parskip}{3mm}
 \setlength{\parindent}{0pt}
+\usepackage[margin=1in]{geometry}
 
 \newcommand{\TODO}[1]{\color{green}\noindent[{\bf TODO: #1}]\color{black}}
 \newcommand{\atline}[1]{\color{red} Lines: #1\color{blue}}
@@ -17,7 +18,8 @@ Thank you for considering the manuscript.
 We appreciate the constructive criticism. 
 It helped improve the quality of this manuscript.
 
-We have carefully answered all your questions and implemented your suggestions to the best of our knowledge.\ The details can be found in the following pages.
+We have carefully answered all your questions and implemented your suggestions to the best of our knowledge.
+The details can be found in the following pages.
 
 With the best regards  \\[3mm]
  
