--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -507,11 +507,7 @@ a large population size that would fit evenly on these resources was chosen.
 Again, the location of optimization is $s_3=19.4$ [m]. 
 \begin{figure}
 	\begin{center}		
-		\begin{tikzpicture}[scale=1]
-		\node (fig1) at (0,0)
-		{\includegraphics[width=0.5\textwidth]{figures/xy_vs_pxy_pareto_front_quads_before_Q5}};
-		\node[star, star points=5, star point ratio=0.5, fill=yellow, draw](key) at (3.35,-1.7) {};
-		\end{tikzpicture}
+		\includegraphics[width=0.7\textwidth]{figures/paperedit_pareto_front_Q5_xy_vs_pxpy}
 	\end{center} 
 		\caption{Pareto front comparing transverse beam sizes ($\sigma_{x,y}$) and transverse momentum ($\sigma_{px,py}$). The yellow star indicates the 
 		point plotted in Fig.~\ref{fig:stat}}
