more responses added

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -38,17 +38,17 @@ display properly. Figure files should be self-contained and we do
 not support the tikz format in the production process. We will also
 need a revised text source file.}
 
-{\bf My response:} {\color{blue} The grid has been removed from Figures 10 and 11.
+{\bf Our response:} {\color{blue} The grid has been removed from Figures 10 and 11.
 PDF versions of the tikz pictures have been made. All updated figures are provided 
 along with an updated source file.}
 
 
-{\bf Referee A (Remarks to Author)}
+{\bf REFEREE A (Remarks to Author)}
 
 1) Remove the sections of code from the text. This adds no value to
 	the paper and should be left for a User’s Manual.
 
-{\bf My response:} {\color{blue} The code sections have been removed.}
+{\bf Our response:} {\color{blue} The code sections have been removed.}
 
 
 2) Provide a stronger physics basis for the AWA optimization. Why is
@@ -59,11 +59,11 @@ component of physics that come into play in the beam squeeze, whatever
 they are – space charge, etc. After all, this is primarily a physics
 journal so the physics context for the application needs to be clear.
 
-{\bf My response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{blue} XXXXX.}
 
 
 
-REFEREE B - ZW10157
+{\bf REFEREE B (Remarks to Author)}
 
 First, optimization systems based on PISA have been in use in
 accelerator design since 2005, and NSGA-II’s use dates from that time
@@ -142,7 +142,7 @@ Pulsar Physics. General Particle Tracer, http://www.pulsar.nl/gpt
 Physics: A. Hofler. “Genetic Algorithms and Their Applications in
 Accelerator Physics,” NAPAC2013, Pasadena, CA, USA, 2013, THTB1
 
-{\bf My response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{blue} XXXXX.}
 
 
 
@@ -160,7 +160,7 @@ but not now. The authors should consider providing a different and
 more compelling motivator to encourage users to consider the system
 they have developed.
 
-{\bf My response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{blue} XXXXX.}
 
 Third, several of the features of this system are available is
 existing systems but are not acknowledged:
@@ -179,7 +179,7 @@ reference list). Others have performed geometry optimization with
 different GA/EA based systems (again the survey reference mentions
 several.)
 
-{\bf My response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{blue} XXXXX.}
 
 That said, a general-purpose optimization system is a useful addition
 to the design tools for accelerators. The way to entice prospective
@@ -234,9 +234,9 @@ prediction and operational experience.
 
 Section I
 
-line 35: trade of -> trade off
+line 35: trade of -$>$ trade off
 
-{\bf My response:} {\color{blue} This typo is corrected in the updated manuscript.}
+{\bf Our response:} {\color{blue} This typo is corrected in the updated manuscript.}
 
 Section II
 
@@ -265,17 +265,19 @@ subsection B
 
 Code and input file details should be in Supplemental Material
 
-subsubsection 3
+{\bf Our response:} {\color{blue} The code has been removed from the updated manuscript. Interested parties can refer to the repository.}
 
-line 427 to to -> to
+subsubsection 3:
+line 427 to to -$>$ to
 
-{\bf My response:} {\color{blue} This typo is corrected in the updated manuscript.}
+{\bf Our response:} {\color{blue} This typo is corrected in the updated manuscript.}
 
-subsubsection 4
-
+subsubsection 4:
 FIGS. 11/12 The discussed case in FIG. 12 is not on either front in
 FIG. 11. Explain why a nonfront solution is used otherwise the
 optimization exercise is moot.
+
+{\bf Our response:} {\color{blue} This was a plotting mistake, and has been corrected in the updated Fig. 11.}
 
 TABLE IV is provided and not discussed. Are these the settings for the
 solution in FIG. 12? The table’s title is confusing. If the table
@@ -283,7 +285,8 @@ contents are input parameters for an optimization, shouldn’t they have
 ranges of values? If the values are a selected solution, shouldn’t the
 title state that directly?
 
-
+{\bf Our response:} {\color{blue} This table shows input parameters for one optimized solution (the solution in Fig. 12). 
+The table title has been changed to the following: "Input Parameters for the optimized solution shown in Figures~11 and 12."}
 
 
  \end{document}
