--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -48,7 +48,7 @@ along with an updated source file.}
 1) Remove the sections of code from the text. This adds no value to
 	the paper and should be left for a User’s Manual.
 
-{\bf Our response:} {\color{blue} The code sections have been removed.}
+{\bf Our response:} {\color{blue} The code examples in sections IV-V have been removed.}
 
 
 2) Provide a stronger physics basis for the AWA optimization. Why is
@@ -142,7 +142,19 @@ Pulsar Physics. General Particle Tracer, http://www.pulsar.nl/gpt
 Physics: A. Hofler. “Genetic Algorithms and Their Applications in
 Accelerator Physics,” NAPAC2013, Pasadena, CA, USA, 2013, THTB1
 
-{\bf Our response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{blue} We agree that some references of import were missing and should have been included.
+Especially, the following: 
+
+I.V. Bazarov and C.K. Sinclair. "Multivariate optimization of a high
+brightness dc gun photoinjector," Phys. Rev. ST Accel. Beams 8,
+034202, 2005
+
+A. Hofler et al., "Innovative applications of genetic algorithms to
+problems in accelerator physics", Phys. Rev. ST Accel. Beams 16,
+010101, 2013
+
+
+}
 
 
 
@@ -255,17 +267,14 @@ subsections B-F
 Replace with a brief overview and put the details in Supplemental
 Material
 
-Section VI
-
+Section VI: 
 Code and input file details should be in Supplemental Material
 
-Section V
-
-subsection B
-
+Section V, subsection B:
 Code and input file details should be in Supplemental Material
 
-{\bf Our response:} {\color{blue} The code has been removed from the updated manuscript. Interested parties can refer to the repository.}
+{\bf Our response:} {\color{blue} The code examples in sections VI-V has been removed from the updated manuscript. 
+	A sentence and link to the repository have been provided. Interested parties can refer to the repository.}
 
 subsubsection 3:
 line 427 to to -$>$ to
@@ -286,7 +295,7 @@ ranges of values? If the values are a selected solution, shouldn’t the
 title state that directly?
 
 {\bf Our response:} {\color{blue} This table shows input parameters for one optimized solution (the solution in Fig. 12). 
-The table title has been changed to the following: "Input Parameters for the optimized solution shown in Figures~11 and 12."}
+The table title has been changed to the following: ``Input Parameters for the optimized solution shown in Figures~11 and 12."}
 
 
  \end{document}
