--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -1,16 +1,13 @@
 @article{ARBENZ2008381,
-title = "On solving complex-symmetric eigenvalue problems arising in the design of axisymmetric VCSEL devices",
-journal = "Applied Numerical Mathematics",
-volume = "58",
-number = "4",
-pages = "381 - 394",
-year = "2008",
-note = "Selected Papers from the Seventh IMACS International Symposium on Iterative Methods in Scientific Computing",
-issn = "0168-9274",
-doi = "https://doi.org/10.1016/j.apnum.2007.01.019",
-url = "http://www.sciencedirect.com/science/article/pii/S0168927407000293",
-author = "Peter Arbenz and Oscar Chinellato",
-keywords = "Maxwell equation, PML, Complex-symmetric eigenvalue problem, Jacobiâ€“Davidson, Preconditioning"
+	author =       "P. Arbenz and O. Chinellato",
+	title =        "On Solving Complex-Symmetric Eigenvalue Problems
+	Arising in the Design of Axisymmetric {VCSEL} Devices",
+	journal =      "Appl. Numer. Math.",
+	year =         2008,
+	volume =       58,
+	number =       4,
+	pages =        "381-394",
+	doi =          "10.1016/j.apnum.2007.01.019"
 }
 
 
@@ -53,8 +50,8 @@ keywords = "Maxwell equation, PML, Complex-symmetric eigenvalue problem, Jacobiâ
 }
 
 @techreport{opal,
-title = {The OPAL (Object Oriented Parallel Accelerator Library) Framework},
-author = {A. Adelmann and Ch. Baumgarten and M. Frey and A. Gsell and V. Rizzoglio and J. Snuverink (PSI) and Ch. Metzger-Kraus and Y. Ineichen and St. Russell (LANL) and Ch. Wang (CIAE) and S. Sheehy and Ch. Rogers (RAL) and D. Winklehner (MIT)},
+title = {The {OPAL} (Object Oriented Parallel Accelerator Library) Framework},
+author = {A. Adelmann and Ch. Baumgarten and M. Frey and A. Gsell and V. Rizzoglio and J. Snuverink and Ch. Metzger-Kraus and Y. Ineichen and St. Russell and Ch. Wang and S. Sheehy and Ch. Rogers and D. Winklehner},
 institution = {Paul Scherrer Institut},
 number = {PSI-PR-08-02},
 year = {(2008-2018)}
@@ -1041,16 +1038,21 @@ language={English}
     note = {\url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.16.2614}}
 }
 
-@InProceedings{pisa,
-    author = {},
-    title = {{PISA} --- A Platform and Programming Language Independent Interface for Search Algorithms},
-    booktitle = {Evolutionary Multi-Criterion Optimization {(EMO 2003)}},
-    pages = {494 -- 508},
-    year = 2003,
-    editor = {Carlos M. Fonseca and Peter J. Fleming and Eckart Zitzler and Kalyanmoy Deb and Lothar Thiele},
-    series = {Lecture Notes in Computer Science},
-    address = {Berlin},
-    publisher = {Springer}
+@incollection{pisa,
+	author =     "Bleuler, S. and Laumanns, M. and Thiele, L. and Zitzler,
+	E.",
+	title =     "{PISA} --- A Platform and Programming Language Independent
+	Interface for Search Algorithms",
+	booktitle =     "Conference on Evolutionary Multi-Criterion Optimization
+	{(EMO~2003)}",
+	editor =     "Fonseca, C. M.  and Fleming, P. J.  and Zitzler, E. and
+	Thiele, L. and Deb, K.",
+	publisher =     "Springer",
+	address =     "Berlin",
+	pages =     "494-508",
+	year =     2003,
+	note =     "(Lecture Notes in Computer Science, 2632)",
+	doi =         "10.1007/3-540-36970-8_35"
 }
 
 @article{dpam:02,
